.metadata/.plugins/org.eclipse.cdt.ui/targetproject1.build.log
15:51:03 **** Incremental Build of configuration Debug for project targetproject1 ****
make -j12 all 
arm-none-eabi-gcc "../Src/main.c" -mcpu=cortex-m4 -std=gnu11 -g3 -DDEBUG -DSTM32F411VETx -DSTM32 -DSTM32F4 -c -I../Inc -O0 -ffunction-sections -fdata-sections -Wall -fstack-usage -fcyclomatic-complexity -MMD -MP -MF"Src/main.d" -MT"Src/main.o" --specs=nano.specs -mfloat-abi=soft -mthumb -o "Src/main.o"
../Src/main.c:1:9: error: macro names must be identifiers
    1 | #define "stm32f4xx.h"
      |         ^~~~~~~~~~~~~
make: *** [Src/subdir.mk:25: Src/main.o] Error 1
"make -j12 all" terminated with exit code 2. Build might be incomplete.

15:51:03 Build Failed. 2 errors, 0 warnings. (took 228ms)

